--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "buffer": "^6.0.3",
     "ethers": "^5.7.2",
+    "firebase": "^9.22.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-accessible-accordion": "^5.0.0",
